# Smart-locks

./: README.md
esp32/: .clangd  CMakeLists.txt  config.env  kconfigs.in  ldgen_libraries  ldgen_libraries.in  project_description.json  sdkconfig.defaults
esp32/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
esp32/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp32/gdbinit/: gdbinit  symbols
esp32/main/: CMakeLists.txt  GUI.c  MQTT.c  esp32_config.h  idf_component.yml  lcd.c  lcd.h  main.c  mqtt_app.h  password.c  password.h  test.c  touch.c  touch.h
esp32/toolchain/: cflags  cxxflags
stm32/: .clangd  CMakeLists.txt  CMakePresets.json  compile_commands.json  stm32.ioc
stm32/Core/Inc/: dht11.h  gpio.h  main.h  oled.h  tft_spi.h
stm32/Core/Src/: dht11.c  gpio.c  lv_port_disp.c  lv_port_disp.h  lv_port_tick.c  main.c  oled.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tft_spi.c
stm32/Middlewares/FreeRTOS/: FreeRTOSConfig.h
stm32/Middlewares/LVGL/: lv_conf.h
stm32/cmake/stm32cubemx/: CMakeLists.txt
